# miner_btc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
deploy/umbrel/: umbrel-app.yml
docs/: bitcoinminer-topic-integration.md  docker-deployment.md
scripts/: regtest_acceptance.sh  regtest_nonempty_block.sh
src/: block.rs  coinbase.rs  config.rs  crypto.rs  dashboard.rs  hardware.rs  header.rs  lib.rs  main.rs  merkle.rs  miner.rs  rpc.rs  stratum.rs  submit.rs  template.rs  tx.rs  worker.rs
tests/: hardware_controller.rs  hardware_dashboard.rs  production_extensions.rs  stratum_messages.rs  stratum_mock_pool.rs  stratum_target_worker.rs
