[package]
name = "miner_btc"
version = "0.1.0"
edition = "2021"
description = "Regtest-oriented Bitcoin mining layout in Rust: getblocktemplate, coinbase, merkle, PoW, submitblock."
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
